// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package objects;

// SerializableMeta is the object metadata that will be stored serialized
message SerializableMeta {
	string ContentType = 1;
	map<string, string> UserDefined = 2;
}